@@ -1,0 +1,12 @@
+
+"doc"
+
+import getopt
+
+def test():
+    "this should fail (there is no getopt.xyz)"
+    try:
+        print ""
+    except getopt.xyz:
+        pass
+
