@@ -3,6 +3,8 @@ Version 0.4	- xx April 2001
   * Handle apply(BaseClass.__init__(self, args))
   * Fix **kwArgs warning if named param is not first
   * Add .rc file processing to specify options (like on cmd line)
+  * Add new warning if module.Attribute doesn't exist
+  * Fix command line handling so you can pass module, package, or filename
 
 Version 0.3	- 17 April 2001
   * Fix some checker crashes (oops)
